--- a/myplugin/build.gradle
+++ b/myplugin/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.heartbeat.apkplugins"
+        applicationId "com.heartbeat.myplugin"
         minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
@@ -21,7 +21,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile project(':zplugin')
+    provided fileTree(include: ['*.jar'], dir: 'libs')
+    provided files('libs/ZPlugin.jar')
 }
