--- a/zplugin/src/main/AndroidManifest.xml
+++ b/zplugin/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.heartbeat.zplugin">
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="18" />
 
     <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
-
+        android:allowBackup="true">
     </application>
 
 </manifest>
