--- a/myplugin/build.gradle
+++ b/myplugin/build.gradle
@@ -18,6 +18,20 @@ android {
         }
     }
 
+//    sourceSets {
+//        main {
+//            manifest.srcFile 'src/main/AndroidManifest.xml'
+//            java.srcDirs = ['src']
+//            jniLibs.srcDirs = ['libs']
+//            resources.srcDirs = ['src']
+//            aidl.srcDirs = ['src']
+//            renderscript.srcDirs = ['src']
+//            res.srcDirs = ['src/main/res']
+//            assets.srcDirs = ['src/main/assets']
+//        }
+//
+//        androidTest.setRoot('tests')
+//    }
 }
 
 dependencies {
